--- a/pom.xml
+++ b/pom.xml
@@ -98,5 +98,11 @@
             <version>3.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-server</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+
     </dependencies>
 </project>
