--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,11 @@
             <version>3.141.59</version>
         </dependency>
 
+        <dependency>
+            <groupId>info.debatty</groupId>
+            <artifactId>java-string-similarity</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+
     </dependencies>
 </project>
