--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,7 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/maven,intellij+all
+
+
+# don't get RNNTagger
+tools/
