--- a/pom.xml
+++ b/pom.xml
@@ -110,5 +110,11 @@
             <version>1.2.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-exec</artifactId>
+            <version>1.3</version>
+        </dependency>
+
     </dependencies>
 </project>
