--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -9,7 +9,7 @@ global.tmp_folder=./files/tmp/
 ################ Pretreatment properties :
 
 # path to RNNTagger
-pretreatment.rnntagger_path=/home/sesstim/Téléchargements/RNNTagger/
+pretreatment.rnntagger_path=/home/sesstim/Telechargements/RNNTagger/
 
 # path to termes_declencheurs file
 pretreatment.termes_declencheurs_path=./files/conf/termes_declencheurs
