--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -3,7 +3,7 @@
 ################ Global (common) properties :
 
 # path to a temporary folder to store every intermediate file
-global.tmp_folder=./files/tmp/
+global.tmp=./files/tmp/
 
 
 ################ Pretreatment properties :
@@ -12,4 +12,20 @@ global.tmp_folder=./files/tmp/
 pretreatment.rnntagger_path=/home/sesstim/Telechargements/RNNTagger/
 
 # path to termes_declencheurs file
-pretreatment.termes_declencheurs_path=./files/conf/termes_declencheurs
+pretreatment.termes_declencheurs_path=./files/conf/termes_declencheurs/
+
+
+################ Multi Terms Extraction
+
+# path to TreeTagger
+mwe.treetagger_path=/home/sesstim/Telechargements/TreeTagger/
+
+# path to patterns
+mwe.patterns_path = ./files/multi_word_extraction_res/patterns/
+
+# path to stopWords
+mwe.stop_words_path=./files/multi_word_extraction_res/stopWords/
+
+# path to datasetReference
+mwe.dataset_reference_path=./files/multi_word_extraction_res/dataSetReference/
+
