--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -14,6 +14,8 @@ pretreatment.rnntagger_path=/home/sesstim/Telechargements/RNNTagger/
 # path to termes_declencheurs file
 pretreatment.termes_declencheurs_path=./files/conf/termes_declencheurs/
 
+#OUTPUT folder
+pretreatment.output_folder=./files/tmp/pdf2txt/
 
 ################ Multi Terms Extraction
 
@@ -29,3 +31,5 @@ mwe.stop_words_path=./files/multi_word_extraction_res/stopWords/
 # path to datasetReference
 mwe.dataset_reference_path=./files/multi_word_extraction_res/dataSetReference/
 
+#OUTPUT folder
+mwe.output_folder=./files/tmp/mwe/
