--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -15,7 +15,7 @@ pretreatment.rnntagger_path=/home/sesstim/Telechargements/RNNTagger/
 pretreatment.termes_declencheurs_path=./files/conf/termes_declencheurs/
 
 #OUTPUT folder
-pretreatment.output_folder=./files/tmp/pdf2txt/
+pretreatment.output_folder=./files/OUTPUT/pdf2txt/
 
 ################ Multi Terms Extraction
 
@@ -32,4 +32,20 @@ mwe.stop_words_path=./files/multi_word_extraction_res/stopWords/
 mwe.dataset_reference_path=./files/multi_word_extraction_res/dataSetReference/
 
 #OUTPUT folder
-mwe.output_folder=./files/tmp/mwe/
+mwe.output_folder=./files/OUTPUT/mwe/
+
+################ Multi Terms Extraction
+
+# path to Open-Sesame
+open-sesame.absolute_path=/home/sesstim/Telechargements/open-sesame/open-sesame/
+
+# Open-Sesame models
+open-sesame.model-target_id=mytargetid
+open-sesame.model-frame_id=myframeid
+open-sesame.model-arg_id=myargid
+
+# patterns path
+open-sesame.patterns=./files/SemanticAnalysis/patterns
+
+#OUTPUT folder
+os_analysis.output_folder=./files/OUTPUT/os_analysis/
