--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -15,7 +15,7 @@ pretreatment.rnntagger_path=/home/sesstim/Telechargements/RNNTagger/
 pretreatment.termes_declencheurs_path=./files/conf/termes_declencheurs/
 
 #OUTPUT folder
-pretreatment.output_folder=./files/OUTPUT/pdf2txt/
+pretreatment.output_folder=/home/sesstim/IdeaProjects/hopMVN/files/OUTPUT/pdf2txt/
 
 ################ Multi Terms Extraction
 
