--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -9,7 +9,7 @@ global.tmp=./files/tmp/
 ################ Pretreatment properties :
 
 # path to RNNTagger
-pretreatment.rnntagger_path=/home/sesstim/Telechargements/RNNTagger/
+pretreatment.rnntagger_path=/home/hugo/Telechargements/RNNTagger/
 
 # path to termes_declencheurs file
 pretreatment.termes_declencheurs_path=./files/conf/termes_declencheurs/
@@ -20,7 +20,7 @@ pretreatment.output_folder=./files/OUTPUT/pdf2txt/
 ################ Multi Terms Extraction
 
 # path to TreeTagger
-mwe.treetagger_path=/home/sesstim/Telechargements/TreeTagger/
+mwe.treetagger_path=/home/hugo/Telechargements/TreeTagger/
 
 # path to patterns
 mwe.patterns_path = ./files/multi_word_extraction_res/patterns/
@@ -37,12 +37,12 @@ mwe.output_folder=./files/OUTPUT/mwe/
 ################ Multi Terms Extraction
 
 # path to Open-Sesame
-open-sesame.absolute_path=/home/sesstim/Telechargements/open-sesame/open-sesame/
+open-sesame.absolute_path=/home/hugo/Telechargements/open-sesame-master/
 
 # Open-Sesame models
-open-sesame.model-target_id=mytargetid
-open-sesame.model-frame_id=myframeid
-open-sesame.model-arg_id=myargid
+open-sesame.model-target_id=fn1.7-pretrained-targetid
+open-sesame.model-frame_id=fn1.7-pretrained-frameid
+open-sesame.model-arg_id=fn1.7-pretrained-argid
 
 # patterns path
 open-sesame.patterns=./files/SemanticAnalysis/patterns
